Archive/6aab03ab45f7d2dfc031de9180acd5d1-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:26:1: error: expected initializer before 'A'
 A = 1
 ^
